# secrets-dump

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
secrets_dump/: __init__.py
tests/: test_version.py
