[tool.isort]
profile = "black"
src_paths = ["secrets_dump", "tests"]

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
explicit_package_bases = true
files = ["**/*.py"]
namespace_packages = true
show_error_codes = true

[tool.poetry]
name = "secrets_dump"
version = "0.1.0"
description = "Import/Export secret service passwords"
authors = ["Nikos Leivadaris <nikosleiv@gmail.com>"]
license = "MIT"
homepage = "https://github.com/nikosl/secrets-dump"
repository = "https://github.com/nikosl/secrets-dump"
keywords = ["secret service", "libsecret", "seahorse", "password"]
readme = "README.md"
include = ["secrets_dump/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
SecretStorage = "^3.3.1"

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
flake8 = "*"
isort = "^5.6"
mkdocs-material = "^8"
mypy = ">0.900,<1"
pre-commit = "^2.8"
pytest = "^6.2"
pytest-cov = "^3"
pytest-mock = "^3.3"

[tool.pytest.ini_options]
addopts = "-q"
minversion = "6.0"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
